Fix MCP client timing and lazy tool callback resolution
Resolves critical timing issues in MCP client initialization and
tool callback resolution that prevented proper registration of
MCP-annotated beans.

- MCP clients created after all singleton beans initialized
  - Implement SmartInitializingSingleton for deferred client creation
    via McpSyncClientInitializer and McpAsyncClientInitializer
- Tool callbacks resolved at execution instead configuration
  - Store ToolCallbackProvider instances in ChatClient and resolve
    lazily at execution time (call/stream)
- Filter MCP providers from StaticToolCallbackResolver
- Inconsistent list reference handling
  - Add mcpClientsReference() methods for proper reference sharing

Breaking Changes:
- MCP providers no longer in static resolver (transparent)
- Client creation timing changed (transparent)

Fixes: #4670, #4618

Signed-off-by: Christian Tzolov <christian.tzolov@broadcom.com>